Bug 121860. Handle case where block frame is embedded inside a XUL document. r=dbaron, sr=hyatt.